# niri-mapper

./: .gitignore  Cargo.toml  PRD.md  README.md  flake.nix
crates/niri-mapper-cli/: Cargo.toml
crates/niri-mapper-cli/src/: main.rs
crates/niri-mapper-config/: Cargo.toml
crates/niri-mapper-config/src/: error.rs  generator.rs  lib.rs  model.rs  parser.rs
crates/niri-mapper-daemon/: Cargo.toml
crates/niri-mapper-daemon/src/: control.rs  device.rs  device_manager.rs  hotplug.rs  injector.rs  ipc.rs  macro_executor.rs  main.rs  remapper.rs
crates/niri-mapper-daemon/src/niri_ipc/: client.rs  error.rs  events.rs  mod.rs  types.rs
examples/: config.kdl
nix/: hm-module.nix  module.nix
systemd/: niri-mapper.service  niri-mapper.user.service
